TestSuite/errors/err0069.pas
  	 uses System;

type TClass = class<T>
end;

var t : TClass<void>;
begin

end.